# micropython-stdlib

./: .ruff.toml  README.md  pyproject.toml  pyrightconfig.json
.gemini/: settings.json
.github/workflows/: ci.yaml
collections/abc/: manifest.py  package.json
enum/: enum.py  enum_test.py  manifest.py
scripts/: install  install.sh  tests.sh
src/collections/: collections_test.py  manifest.py  package.json
src/collections/abc/: abc.py  manifest.py  package.json
src/collections/collections/: __init__.py
src/enum/: enum.py  manifest.py  package.json
src/typing/: manifest.py  package.json  typing.py  typing_test.py
typing/: manifest.py  typing.py  typing_test.py
