[project]
name = "micropython-stdlib"
version = "0.1.0"
description = "Python standard libraries for MicroPython."
requires-python = ">=3.14.0, <3.15.0"
readme = "README.md"
license = "GPL-3.0-or-later"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://github.com/micropytest/micropython-stdlib"
repository = "https://github.com/micropytest/micropython-stdlib"

[tool.poetry]
requires-poetry = ">=2.3.2"
package-mode = false

[dependency-groups]
dev = [
  "ruff (>=0.15.6,<1.0.0)",
  "pyright (>=1.1.408,<2.0.0)",
]
